--- a/website/templates/pages/about.html
+++ b/website/templates/pages/about.html
@@ -1,10 +1,10 @@
 {% extends 'template.html' %}
 {% block meta %}
-    <title>Home</title>
+    <title>About</title>
 {% endblock %}
 {% block main %}
     <section>
-        <h1>Welcome Home</h1>
+        <h1>About this app...</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis 
             perspiciatis eligendi eaque?
