--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -1,20 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootswatch_darkly.css') }}">
+
     {% block meta %}{% endblock %}
-</head>
-<body>
-    <nav>
-        <p>Navbar placeholder</p>
+
+  </head>
+
+  <body>
+    <!-- Navbar template -->
+    
+    <!-- Original Navbar Template -->
+    <!-- <nav> -->
+      <!-- <p>Navbar placeholder</p> -->
+    <!-- </nav> -->
+
+    <!-- Copied from getbootstrap.com-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item ">
+            <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">#####</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+        </ul>
+      </div>
     </nav>
+
+    
+    <!-- Main Jinja block -->
     <main>
-        {% block main %}
-        {% endblock %}
+      {% block main %}
+      {% endblock %}
     </main>
-    <footer>
+
+    <!-- Original Footer Template -->
+    <footer class="page-footer">
        <p>Footer placeholder</p>
-    </footer>
-</body>
+    </footer>  
+
+    <!-- Bootstrap JavaScript -->
+    <script src="{{ url_for('static', filename='bootstrap.js') }}"></script>
+
+  </body>
 </html>
