--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -5,21 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootswatch_darkly.css') }}">
+    <!-- Bootstrap CSS : Bootswatch Darkly -->
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha384-rCA2D+D9QXuP2TomtQwd+uP50EHjpafN+wruul0sXZzX/Da7Txn4tB9aLMZV4DZm" crossorigin="anonymous">
 
     {% block meta %}{% endblock %}
 
   </head>
 
   <body>
-    <!-- Navbar template -->
     
-    <!-- Original Navbar Template -->
-    <!-- <nav> -->
-      <!-- <p>Navbar placeholder</p> -->
-    <!-- </nav> -->
-
+    <!-- Navbar template -->
     <!-- Copied from getbootstrap.com-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -53,8 +48,13 @@
        <p>Footer placeholder</p>
     </footer>  
 
-    <!-- Bootstrap JavaScript -->
-    <script src="{{ url_for('static', filename='bootstrap.js') }}"></script>
-
+    <!-- Bootstrap JQuery/Popper/JavaScript -->
+    <!-- JQuey: Disabled -->
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
+    <!-- Popper: Disabled -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
+    <!-- JavaScript -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  
   </body>
 </html>
